--- a/src/templates/component.ejs
+++ b/src/templates/component.ejs
@@ -2,9 +2,10 @@ import Mui<%- component %>, { <%- component %>Props as Mui<%- component %>Props 
 import * as React from "react";
 
 // https://material-ui.com/api/<%- componentDashed %>
-export function <%- component %>(props: Mui<%- component %>Props) {
+function <%- component %>(props: Mui<%- component %>Props) {
   return (<Mui<%- component %> {...props} />);
 }
 
 // Following line required, see https://material-ui.com/guides/composition/#wrapping-components
 <%- component %>.muiName = Mui<%- component %>.muiName;
+export { <%- component %> };
