--- a/src/templates/index.ejs
+++ b/src/templates/index.ejs
@@ -1,2 +1,2 @@
-import <%- component %> from "./<%- component %>"
+import { <%- component %> } from "./<%- component %>"
 export default <%- component %>
