Update to hardcoded MUI names to match example

--- a/src/templates/component.ejs
+++ b/src/templates/component.ejs
@@ -7,5 +7,5 @@ function <%- component %>(props: Mui<%- component %>Props) {
 }
 
 // Following line required, see https://material-ui.com/guides/composition/#wrapping-components
-<%- component %>.muiName = Mui<%- component %>.muiName;
+<%- component %>.muiName = '<%- component %>';
 export { <%- component %> };
